--- a/Frontend/src/components/Page/Check.css
+++ b/Frontend/src/components/Page/Check.css
@@ -42,7 +42,7 @@
     padding: 10px;
     font-size: 16px;
     color: #fff;
-    background-color: #007bff;
+    background-color: #5c7ea2;
     border: none;
     border-radius: 4px;
     cursor: pointer;
