--- a/Frontend/src/components/Page/Dashboard.css
+++ b/Frontend/src/components/Page/Dashboard.css
@@ -21,14 +21,16 @@
     margin-top: 20px;
     background-color: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    
   }
-  
+
   /* Table header styling */
   .dashboard .customer-table th {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #c7848e;
+    color: rgb(12, 12, 12);
     text-align: left;
     padding: 10px;
+    text-align: center;
   }
   
   /* Table row styling */
