--- a/Frontend/src/components/Sidebar/Sidebar.css
+++ b/Frontend/src/components/Sidebar/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar {
   height: 100vh;
   width: 80px;
-  background-color: #333;
+  background-color: #DAA3A3;
   padding-top: 20px;
   position: fixed;
   left: 0;
@@ -10,16 +10,18 @@
   z-index: 1000;
   transition: width 0.3s;
   
+  
 }
 
 .sidebar:hover{
   width:250px;
 }
 .sidebar-logo {
-  color: #fff;
   text-align: center;
   font-size: 1.8rem;
   margin-bottom: 2px;
+  margin-left: -10px;
+ 
 }
 
 .sidebar-menu {
@@ -29,7 +31,7 @@
 
 .sidebar-link {
   display: block;
-  color: #fff;
+  color: #211d1d;
   padding: 15px 20px;
   text-decoration: none;
   white-space:nowrap;
@@ -40,7 +42,7 @@
 }
 
 .sidebar-link:hover {
-  background-color: #f0a500;
+  background-color: #ffffff;
   color: #000;
   font-size:1.5rem
 }
@@ -61,17 +63,6 @@
   transform: scale(1.2); /* ขยายไอคอนเมื่อชี้ */
 }
 
-.page-content{
-  margin-left:80px;
-  transition: margin-left 0.3s;
-  padding:20px;
-}
-
-.sidebar:hover + .page-content{
-  margin-left: 250px;
-}
-
-/* Sidebar.css */
 
 
 /*dropdown*/
@@ -79,46 +70,13 @@
 .dropdown button {
   background: none; /* ลบพื้นหลัง */
   border: none; /* ลบกรอบ */
-  color: #fff; /* สีตัวอักษร */
+  color: #2d1313; /* สีตัวอักษร */
   width: 100%; /* ทำให้ปุ่มเต็มความกว้าง */
   text-align: left; /* จัดข้อความให้ชิดซ้าย */
   padding: 15px 20px; /* ขนาด padding สำหรับปุ่ม */
   cursor: pointer; /* แสดง cursor เป็น pointer เมื่อชี้ */
   font-size: 1.2rem; /* ขนาดตัวอักษร */
   transition: background-color 0.3s; /* เปลี่ยนพื้นหลังเมื่อ hover */
-}
-
-.dropdown button:hover {
-  background-color: #f0a500; /* เปลี่ยนสีพื้นหลังเมื่อ hover */
-  color: #000; /* เปลี่ยนสีตัวอักษรเมื่อ hover */
-  
-}
-
-.dropdown-menu {
-  list-style-type: none; /* ลบจุดรายการ */
-  padding: 0; /* ลบ padding */
-  margin: 0; /* ลบ margin */
-}
-
-.dropdown-menu li {
-  border-bottom: 1px solid #444; /* เพิ่มเส้นแบ่ง */
-}
-
-.dropdown-menu .sidebar-link {
-  display: flex; /* ใช้ flexbox เพื่อจัดตำแหน่งไอคอนและข้อความ */
-  align-items: center; /* จัดให้ไอคอนและข้อความอยู่ตรงกลาง */
-  padding: 10px 20px; /* ขนาด padding สำหรับ link */
-  color: #fff; /* สีตัวอักษร */
-  text-decoration: none; /* ลบการขีดเส้นใต้ */
-}
-
-.dropdown-menu .sidebar-link:hover {
-  background-color: #f0a500; /* เปลี่ยนสีพื้นหลังเมื่อ hover */
-  color: #000; /* เปลี่ยนสีตัวอักษรเมื่อ hover */
-}
-
-.dropdown-menu .icon {
-  margin-right: 10px; /* เพิ่มช่องว่างระหว่างไอคอนและข้อความ */
 }
 
 /*dropdown*/
