--- a/Frontend/src/components/Page/Add.css
+++ b/Frontend/src/components/Page/Add.css
@@ -97,10 +97,15 @@ h2 {
    
    
   }
+  .row{
+    margin-left:30px;
+  }
   .card{
     position: relative;
+    width: 200px;
     border-radius: 10px;
-    border-color: black; }
+    border-color: black; 
+  }
 
    .add{
     position: relative;
